# rehearsaltools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  reaper_http_remote.lua
crates/uploader/: Cargo.toml
crates/uploader/src/: config.rs  fs_atomic.rs  lib.rs  main.rs  manifest.rs  multipart.rs  soundcloud.rs  uploader.rs  watcher.rs
crates/uploader/tests/: manifest_tests.rs  watcher_tests.rs
reascripts/: console.lua  reaper_osc_dispatcher.lua  rehearsaltools.lua
server/: package.json  tsconfig.json
src/: handlers.lua  http.lua  json.lua  reaper_api.lua  router.lua  validation.lua
tasks/: 001-server-rehearsal-state.md  002-server-songs-endpoint.md  003-store-and-api-client.md  004-css-migration.md  005-delete-old-screens.md  006-status-badge-and-header.md  007-transport-footer.md  008-playback-drawer.md  009-hamburger-menu.md  01-lua-foundation.md  010-bottom-sheets.md  011-simple-song-view.md  012-integration-and-cleanup.md  02-web-remote-client.md  03-osc-infra.md  04-reaper-config-files.md  05-spa-currentTake.md  06-lua-action-scripts.md  07-routes-regions.md  08-routes-songform.md  09-routes-project-mixdown.md  10-index-wiring.md  11-cleanup-deletions.md  12-readme.md  BUILD_PROGRESS.md  README.md  planning-questions.md  review-report.md  task-01-backend-types-and-song-store.md  task-01-install-storybook.md  task-01-logger-module.md  task-01-pattern-parser.md  task-01-status-badge.md  task-01-test-harness-and-json.md  task-02-backend-flatten-module.md  task-02-dispatch-logging.md  task-02-http-parser.md  (+43 more)
tests/: test_http.lua  (+5 more)
(+185 files in other folders)
