[package]
name = "rehearsal-uploader"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rehearsal_uploader"
path = "src/lib.rs"

[[bin]]
name = "uploader"
path = "src/main.rs"
